@@ -889,6 +889,7 @@ Localization
         #LOC_BDArmory_TargetPitch = Moving Pitch
         #LOC_BDArmory_MaxPitchAngle = Max Pitch Angle
         #LOC_BDArmory_BankAngle = Bank Angle
+        #LOC_BDArmory_WeaveFactor = Weave Factor
         #LOC_BDArmory_MaxBankAngle = Max Bank Angle
         #LOC_BDArmory_BroadsideAttack = Attack Vector
         #LOC_BDArmory_BroadsideAttack_enabledText = Broadside
@@ -912,6 +913,7 @@ Localization
         #LOC_BDArmory_DriverAI_CombatAlt = Default cruising altitude/depth
         #LOC_BDArmory_DriverAI_MaxDrift = Max angle craft veers off prograde during cornering
         #LOC_BDArmory_DriverAI_Pitch = Desired craft Attitude Angle
+        #LOC_BDArmory_AIWindow_WeaveFactor = Strength of weaving when under fire
         #LOC_BDArmory_DriverAI_SteerMult = Control input multiplier
         #LOC_BDArmory_DriverAI_AtkVector = Craft orientation towards target when attacking
         #LOC_BDArmory_DriverAI_maintainRange = Craft will stop/reverse at minimum Range
@@ -926,7 +928,8 @@ Localization
         #LOC_BDArmory_DriverAI_Slopes = Slope Angle and target Pitch - These set angle constraints for the vessel. Slope Angle sets the max slope the AI will attempt to drive up. Target Pitch sets the desired vessel Attitude (Pitch angle relative to the ground) the vessel should try to maintain.
         #LOC_BDArmory_DriverAI_Speeds = Cruise and Max speed set vessel speeds. Cruise Speed is the speed the AI will seek to maintain while not in combat. max Speed is the speed the AI will attempt to reach when in combat.
         #LOC_BDArmory_DriverAI_Drift = Max Drift - This sets the maximum the vessel will veer off prograde when turing.
-        #LOC_BDArmory_DriverAI_bank - Bank Angle - This tells the AI the maximum it should allow the vessel to bank or heel over during maneuvers.
+        #LOC_BDArmory_DriverAI_bank = Bank Angle - This tells the AI the maximum it should allow the vessel to bank or heel over during maneuvers.
+        #LOC_BDArmory_DriverAI_Weave = Weave Factor - When under fire or a missile is incoming, the craft tries weaving to throw off the attacker's aim. This controls the strength of that weaving.
         #LOC_BDArmory_DriverAI_steerMult = Steer Mult - This is the Proportional input for the Surface AI PID controller. Too low, and the craft will use less than the full range of its control authority. Too high, and the craft will apply more than needed and overshoot the desired orientation.
         #LOC_BDArmory_DriverAI_SteerDamp = Steer Damp - This is the Derivative input for the Surface AI PID controller. This is how much the craft's rotation to a new orientation will be damped out. Too low, and the craft will oscillate due to overshooting the correct orientation. Too high, and the damping will counter too much of the change in orientation, and craft will not turn as fast.
         #LOC_BDArmory_DriverAI_Orientation = Attack Vector, Broadside Dir - These set how the AI will approach and engage targets. The Attack Vector setting tells the AI either to engage with the bow of the vessel pointing at the target, or if to have the vessel's broadside pointing at the target. Broadside Direction tells the AI whether it should favor presenting the Port or Starboard broadside towards the target.
